--- a/muckrock/templates/admin/base_site.html
+++ b/muckrock/templates/admin/base_site.html
@@ -24,10 +24,11 @@
                     agencyWidgetElement.yourlabsWidget().autocomplete.data = {
                             'jurisdiction_id': value[0],
                     };
-            } else {
+            } else if (value !== undefined) {
                     // If value is empty, empty autocomplete.data
                     agencyWidgetElement.yourlabsWidget().autocomplete.data = {}
             }
+            
             $('body').on('change', '.autocomplete-light-widget select[name$=jurisdiction]', function() {
                     var agencySelectElement = $('.autocomplete-light-widget select[name$=agency]');
                     var agencyWidgetElement = agencySelectElement.parents('.autocomplete-light-widget');
