fix button style

--- a/muckrock/templates/foia/detail.html
+++ b/muckrock/templates/foia/detail.html
@@ -297,7 +297,7 @@ Sincerely,
                             <input type="file" name="attachments" id="attachments" multiple/>
 
                             <div class="buttons">
-                                <button class="primary" type="submit" name="agency-reply" value="1">Send</button>
+                                <button class="button primary" type="submit" name="agency-reply" value="1">Send</button>
                                 <a href="#inactive" class="button cancel">Cancel</a>
                             </div>
                         </form>
